--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <marquee behavior="alternate"><h1>/// This webpage has been hacked by Team AYAT ///</h1></marquee>
     <h1 style="text-align: center;">Team AYAT is a BANGLADESHI hacker group </h1>
     <p>Bangladesh National Anthem</p>
-    <audio autoplay loop>
+    <audio controls  autoplay loop>
       <source src="horse.ogg" type="audio/ogg">
       <source src="Bangladesh National Anthem.mp3" type="audio/mpeg">
     </audio>
