--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
     <header><h1>Team AYAT</h1>
       <marquee><h1>/// Any System Are Not Safe ///<h1></marquee>
       <nav>
-        <ul>
+<!--         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-        </ul>
+        </ul> -->
       </nav>
     </header>
     <marquee behavior="alternate"><h1>/// This webpage has been hacked by Team AYAT ///</h1></marquee>
@@ -169,9 +169,9 @@
       </form>
       
     </main>
-    <footer>
+<!--     <footer>
       <p>Copyright 2023 Team AYAT</p>
-    </footer>
+    </footer> -->
     <script>
       // Disable right-click how to stop inspect element in browser 
 document.addEventListener('contextmenu', (e) => e.preventDefault());
