--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>My Blog</title>
+    <title>india-roadmap</title>
     <!--<link rel="stylesheet" href="styles.css">-->
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg">
   </head>
   <body>
     <style>
